--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ markovify==0.7.1
 nltk==3.3
 oauthlib==2.0.7
 PySocks==1.6.8
-requests==2.18.4
+requests>=2.20.0
 requests-oauthlib==0.8.0
 six==1.11.0
 slacker==0.9.65
